--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,10 @@
 body{
-  background-color: purple;
+  background-color: #cbd9ef;
+}
+
+article{
+  box-sizing: border-box;
+  border: 1px black solid;
+  height: 100px;
+  width: 100px;
 }
