--- a/styles/base.css
+++ b/styles/base.css
@@ -15,6 +15,12 @@ div{
   width: 100px;
 }
 
+nav{
+  border: 1px black solid;
+  height: 25%;
+  width: 50%;
+}
+
 #flexbox{
   background-color: #207228;
 }
